# etl-analisis-ingresos-impuestos-ajuste-inflacion

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docker/: docker-compose.yml
src/: config.py  extraction.py  loading.py  transformation.py
